update nav to be visible on landing and mobile - rename scale css var to max-scale - create new scale css var to animate nav - bug when selecting other nav items from the menu after 1st

--- a/src/_includes/landing.scss
+++ b/src/_includes/landing.scss
@@ -6,7 +6,7 @@
   align-items: center;
 
   & ~ .Nav {
-    --scale: 2;
+    --max-scale: 2;
 
     &::before {
       opacity: 1;
@@ -30,6 +30,10 @@
         margin-top: -50%;
         margin-left: 50%;
       }
+    }
+
+    .Nav-items {
+      --scale: 1;
     }
   }
 }
