--- a/src/_includes/nav.scss
+++ b/src/_includes/nav.scss
@@ -45,7 +45,7 @@ $page-class-by-name: (
   $radius-label: 60px;
   $rotate-speed: 100s;
 
-  --scale: 1;
+  --max-scale: 1;
 
   @include fill();
 
@@ -72,21 +72,30 @@ $page-class-by-name: (
   &-items {
     $items: & !global;
     $inset: 100px;
+
+    --scale: 0;
+
     pointer-events: all;
 
     @include nav-transition(width, height, top, right);
 
     position: absolute;
-    width: calc($radius * var(--scale) * 2);
-    height: calc($radius * var(--scale) * 2);
+    width: calc($radius * var(--max-scale) * 2);
+    height: calc($radius * var(--max-scale) * 2);
 
     @include mobile {
+      --scale: 1;
+
       right: -80px;
     }
 
     @include desktop {
       top: $inset;
       right: $inset;
+    }
+
+    &:hover {
+      --scale: 1;
     }
   }
 
@@ -113,7 +122,7 @@ $page-class-by-name: (
     > .Boshi {
       @include nav-transition(transform);
 
-      transform: scale(calc(var(--scale) * 0.5));
+      transform: scale(calc(var(--max-scale) * 0.5));
     }
   }
 
@@ -143,29 +152,43 @@ $page-class-by-name: (
       &:nth-child(#{$i + 1}) {
         @include nav-transition(transform);
 
-        transform: scale(0);
-        @at-root #{nav-item-selected()} {
-          transform: scale(1);
-        }
-
-        #{$item-label} {
-          transform: scale(0);
-          @include nav-transition(transform);
-        }
-      }
-
-      #{$items}:hover &:nth-child(#{$i + 1}) {
-        transform: scale(1)
+        transform: scale(var(--scale))
           translate(
-            calc($radius * var(--scale) * cos($i * #{$a}deg)),
-            calc($radius * var(--scale) * sin($i * #{$a}deg))
+            calc(
+              $radius * var(--scale) * var(--max-scale) * cos($i * #{$a}deg)
+            ),
+            calc($radius * var(--scale) * var(--max-scale) * sin($i * #{$a}deg))
           );
 
-        #{$item-label} {
+        @at-root #{nav-item-selected()} {
           transform: scale(1)
             translate(
-              calc($radius-label * var(--scale) * cos($i * #{$a}deg)),
-              calc($radius-label * var(--scale) * sin($i * #{$a}deg))
+              calc(
+                $radius * var(--scale) * var(--max-scale) * cos($i * #{$a}deg)
+              ),
+              calc(
+                $radius * var(--scale) * var(--max-scale) * sin($i * #{$a}deg)
+              )
+            );
+        }
+
+        #{$item-label} {
+          @include nav-transition(transform);
+
+          transform: scale(var(--scale))
+            translate(
+              calc(
+                $radius-label *
+                  var(--scale) *
+                  var(--max-scale) *
+                  cos($i * #{$a}deg)
+              ),
+              calc(
+                $radius-label *
+                  var(--scale) *
+                  var(--max-scale) *
+                  sin($i * #{$a}deg)
+              )
             );
         }
       }
@@ -190,8 +213,8 @@ $page-class-by-name: (
   @include nav-transition(width, height);
   @include flex-center;
 
-  width: calc(80px * var(--scale));
-  height: calc(80px * var(--scale));
+  width: calc(80px * var(--max-scale));
+  height: calc(80px * var(--max-scale));
 
   @at-root &:hover,
     #{nav-item-selected()} {
@@ -237,7 +260,7 @@ $page-class-by-name: (
 
     display: block;
     color: $black;
-    font-size: calc($font-size1 * var(--scale));
+    font-size: calc($font-size1 * var(--max-scale));
     text-shadow: $color-shadow-text 2px 0 2px;
     text-align: center;
     transition:
@@ -250,7 +273,7 @@ $page-class-by-name: (
 
     @include desktop {
       opacity: 0;
-      font-size: calc($font-size3 * var(--scale));
+      font-size: calc($font-size3 * var(--max-scale));
     }
 
     #{$items}:hover & {
